--- a/README
+++ b/README
@@ -5,6 +5,9 @@ Support at: http://forums.bukkit.org/threads/nowplaying-last-fm-plugin-within-mi
 Version History:
 [x]Fixed [+]Added [-]Removed [/]Improved/Changed [i]Information
 
+NowPlaying v1.4.1 (Diorama) - 02/Mar/2011
+[x] fixed: the settings file wasn't getting created with new installs, thanks to lonerzboy for bringing this to my attention!
+
 NowPlaying v1.4 (Diorama) - 01/Mar/2011
 [-] Removed code to display player logins/logoffs as this is done by other plugins
 [/] Renamed package from com.bukkit.thegleek.NowPlaying to com.thegleek.bukkit.NowPlaying
